Archive2/56/db4f441db80196/output
clang version 3.6.0 (tags/RELEASE_360/final 235480)
Target: x86_64-unknown-linux-gnu
Thread model: posix
main.cpp:26:10: error: variable 'b' with type 'auto' has incompatible initializer of type '<overloaded function type>'
    auto b = bar<A>; // fine
         ^   ~~~~~~
1 error generated.
g++ (GCC) 5.1.0
Copyright (C) 2015 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

b
b
b
